# wind-pypcd

./: .gitignore  CHANGELOG.md  README.md  main.py  pyproject.toml  setup.py  tox.ini
.github/workflows/: publish-release.yml
docs/: development_guide.md  features_and_examples.md  release_workflow.md
pypcd/: numpy_pc2.py  pypcd.py  version.py
src/wind_pypcd/: __init__.py  nea_pc_format.py  numpy_pc2.py  pypcd.py
src/wind_pypcd/tests/: test_pypcd.py
test_data/: front_lidar.pcd  left_lidar.pcd  right_lidar.pcd
wind_pypcd/: pdutil.py  pypcd.py
wind_pypcd/tests/: test_pypcd.py
