[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
dependencies = ["numpy", "python-lzf"]
name = "wind-pypcd"
version = "0.4.0"
description = "tools for pcd files"
authors = [{ name = "windzu", email = "windzu1@gmail.com" }]
readme = "README.md"
license = { text = "MIT" }
keywords = ["pcd", "point cloud", "lidar", "tools"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.8,!=3.11.*,<3.13"

[project.scripts]
wind-pypcd = "wind_pypcd.main:main"

[tool.setuptools]
include-package-data = true
